# emr-config-builder

./: .gitignore  LICENSE  README.md
assets/design/: emr_config_builder.drawio
infra/: app.py  cdk.json  pyproject.toml
infra/aws_ecb/: infra.py
infra/ecb/: ecb_config.py
service/api_lambda/: main.py
service/dynamo_load_lambda/: dockerfile  main.py
services/backend_lambda/: dockerfile  main.py
services/spider_lambda/: dockerfile  main.py  requirements.txt
